# distribute-challenge

./: Dockerfile  README.md  docker-compose.yaml  environment.yaml  pyproject.toml
.github/workflows/: tests.yml
src/distribute_challenge/: __init__.py  distributable.py
src/distribute_challenge/benchmarking/: load.py  monitor.py
src/distribute_challenge/execution_backends/: __init__.py  celery.py  local.py
tests/: test_celery_backend.py  test_decorator.py  test_local_backend.py
